--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@cycle/isolate": ">=3.4.0",
         "@cycle/run": ">=4.4.0",
         "@cycle/time": "^0.19.0",
+        "bootstrap": "^4.3.1",
         "cycle-restart": "0.2.3",
         "cycle-scripts-one-fits-all": "^7.2.1",
         "cycle-storageify": ">=4.0.1",
@@ -17,8 +18,10 @@
         "cyclic-router": "^6.0.0",
         "html-looks-like": "1.0.3",
         "husky": "^2.1.0",
+        "jquery": "^3.4.0",
         "jsverify": ">=0.8.4",
         "lint-staged": "^8.1.5",
+        "popper.js": "^1.15.0",
         "prettier": ">=1.17.0",
         "snabbdom-to-html": ">=5.1.1",
         "sockjs": "^0.3.19",
