--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@cycle/dom": ">=20.4.0",
+        "@cycle/dom": "^22.8.0",
         "@cycle/history": ">=6.10.0",
-        "@cycle/http": ">=14.10.0",
+        "@cycle/http": "^15.4.0",
         "@cycle/isolate": ">=3.4.0",
         "@cycle/run": ">=4.4.0",
         "@cycle/time": "^0.19.0",
-        "bootstrap": "^4.3.1",
+        "bootstrap": "^4.5.2",
         "cycle-restart": "0.2.3",
         "cycle-scripts-one-fits-all": "^7.2.1",
         "cycle-storageify": ">=4.0.1",
@@ -18,20 +18,21 @@
         "cyclic-router": "^6.0.0",
         "html-looks-like": "1.0.3",
         "husky": "^2.1.0",
-        "jquery": "^3.4.0",
+        "jquery": "^3.5.1",
         "jsverify": ">=0.8.4",
         "lint-staged": "^8.1.5",
-        "popper.js": "^1.15.0",
-        "prettier": ">=1.17.0",
-        "snabbdom-to-html": ">=5.1.1",
-        "sockjs": "^0.3.19",
-        "sockjs-client": "^1.3.0",
+        "popper.js": "^1.16.1",
+        "prettier": "^2.1.1",
+        "snabbdom-to-html": "^6.0.0",
+        "sockjs": "^0.3.21",
+        "sockjs-client": "^1.5.0",
         "switch-path": ">=1.2.0",
-        "vertx3-eventbus-client": "^3.7.0",
-        "xstream": ">=11.10.0"
+        "vertx3-eventbus-client": "^3.9.2",
+        "xstream": "^11.13.0"
     },
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.8.2"
+        "@fortawesome/fontawesome-free": "^5.14.0",
+        "sass-loader": "^7.1.0"
     },
     "scripts": {
         "precommit": "lint-staged",
